app/chess/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-chess
spec:
  selector:
    app: chess
  ports:
  - port: 80
